# actual-cli

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  TESTING.md  WORKFLOW.distributed.md  WORKFLOW.md  build.rs  cov-49348-13231157670858116958_0.profraw  cov-49352-11395975685824298073_0.profraw  cov-49359-1119603254927623099_0.profraw  cov-49365-5875096076572328606_0.profraw  cov-49367-13227603051237965516_0.profraw  cov-49423-5348981638906121684_0.profraw  cov-49425-8206499305253367968_0.profraw  cov-49436-218106693169089245_0.profraw  cov-49444-12243143788277597429_0.profraw  cov-49448-9834462665569136021_0.profraw  cov-49470-2210013495571320166_0.profraw  cov-49485-9757836914637345410_0.profraw  cov-49490-2423620804329595419_0.profraw  cov-49509-13327623720419229061_0.profraw  cov-49510-11787933147229883345_0.profraw  cov-49512-1579609186315263155_0.profraw  cov-49523-5676304549110640795_0.profraw  cov-49535-3367331581100237020_0.profraw  cov-49536-3387509669129932297_0.profraw  cov-49563-16525560353885048668_0.profraw  cov-49571-15761448393526413172_0.profraw  cov-49688-6649800795790500633_0.profraw  cov-49689-6190170641356898524_0.profraw  cov-49690-6168118705144927764_0.profraw  (+659 more)
.beads/: README.md  config.yaml  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.claude/rules/: 29aaf503-3df8-4d93-b7b7-53ab90c957f6.md  7d2cad87-8749-4a16-b4bc-8de79a01c1e1.md  8d11aed5-d4a3-4ef6-937a-085f723bd997.md  fd1181e0-c600-46af-94d8-829c8e8b2b12.md
.cursor/rules/: adr-001.mdc  adr-002.mdc  adr-003.mdc  adr-004.mdc
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-and-test.yml  build.yml  claude-code-review.yml  claude.yml  coverage.yml  docker.yml  lint.yml  npm-publish.yml  release.yml  skill-update-reminder.yml  test.yml
.opencode/skills/: actual
.serena/: project.yml
benches/: analysis_baseline.rs  analysis_baseline_results.json  analysis_baseline_results_llm.json  analysis_baseline_results_static.json
coverage-report/: coverage-summary.txt  lcov.info
crates/symphony/: Cargo.toml  USAGE.md
crates/symphony-worker/: Cargo.toml
crates/symphony-worker/src/: client.rs  config.rs  executor.rs  lib.rs  main.rs  test_support.rs  worker.rs  workspace.rs
crates/symphony/src/: agent.rs  agent_process.rs  config.rs  error.rs  github.rs  lib.rs  main.rs  mcp.rs  model.rs  orchestrator.rs  persistence.rs  prompt.rs  protocol.rs  server.rs  tracker.rs  watcher.rs  workflow.rs  workspace.rs
crates/symphony/static/: dashboard.css  dashboard.html  dashboard.js
crates/tui-test/: CLAUDE.md  Cargo.toml
crates/tui-test/src/: error.rs  keys.rs  lib.rs  pty.rs  screen.rs  session.rs  snapshot.rs
crates/tui-test/src/capture/: config.rs  mod.rs  store.rs  timeline.rs
crates/tui-test/src/render/: color.rs  font.rs  mod.rs  renderer.rs
docker/: .env.example  orchestrator.Dockerfile  worker.Dockerfile
docs/: AGENT_AUTH.md  CANDIDATE_ADRS.md  CLI_DISTRIBUTION.md  GETTING_STARTED.md  GOOD_ADRS.md  LOCAL_DEVELOPMENT.md  RESEARCH_NOTES.md  SECURITY_REVIEW.md  SKILL_DISTRIBUTION.md  actual-cli-architecture.md  benchmark-static-vs-llm-analysis.md  homebrew-distribution.md  logo.txt  logo_small.txt  logo_tiny.txt  npm-distribution.md  seed_adr_bank.sql
docs/adr/: 29aaf503-3df8-4d93-b7b7-53ab90c957f6-adopt-modular-library-architecture-for-test-and-benchmark-infrastructure.md  7d2cad87-8749-4a16-b4bc-8de79a01c1e1-adopt-protocol-based-public-api-design-for-external-integration.md  8d11aed5-d4a3-4ef6-937a-085f723bd997-adopt-secure-secrets-management-in-ci-cd-pipeline.md  fd1181e0-c600-46af-94d8-829c8e8b2b12-adopt-comprehensive-unit-testing-strategy-for-ci-cd-pipeline-components.md
docs/plan/: 01-overview.md  02-cli-design.md  03-repo-analysis.md  04-api-contract.md  05-adr-tailoring.md  06-claude-md-generation.md  07-rust-architecture.md  08-auth-strategy.md
npm/actual/: package.json
npm/actual-darwin-arm64/: package.json
npm/actual-darwin-x64/: package.json
npm/actual-linux-arm64/: package.json
npm/actual-linux-x64/: package.json
npm/actual-win32-x64/: package.json
promo/: README.md  package-lock.json  package.json  tsconfig.json
promo/src/: Root.tsx
scripts/: auth-proxy.py  build-skill-variants.sh  container-e2e.sh  e2e.sh  sync-npm-version.sh
site/: index.html  package-lock.json  package.json  styles.css  tailwind.config.js
site/app/: globals.css  layout.tsx  page.tsx
site/lib/: docs-data.ts
src/: AGENTS.md  CLAUDE.md  error.rs  git.rs  lib.rs  main.rs  model_cache.rs  net.rs  testutil.rs
src/.github/: copilot-instructions.md
src/analysis/: cache.rs  confirm.rs  mod.rs  orchestrate.rs  types.rs
src/api/: client.rs  mod.rs  retry.rs  types.rs
src/auth/: jwt_bearer.rs  loopback.rs  mod.rs  oauth.rs  pat.rs  pkce.rs  store.rs  token_store.rs
src/branding/: banner.rs
src/claude/: anthropic_api.rs  auth.rs  binary.rs  mod.rs  obfuscation.rs  openai_api.rs  options.rs  prompts.rs  schemas.rs  subprocess.rs
src/cli/: args.rs  mod.rs
src/config/: dotpath.rs  mod.rs  paths.rs  rejections.rs  sticky.rs  types.rs
src/generation/: budget.rs  format.rs  markers.rs  merge.rs  mod.rs  writer.rs
src/runner/: anthropic_api.rs  auth.rs  binary.rs  codex_cli.rs  cursor_cli.rs  cursor_runner.rs  http_retry.rs  mod.rs  obfuscation.rs  openai_api.rs  options.rs  probe.rs  prompts.rs  schemas.rs  subprocess.rs  util.rs
src/tailoring/: batch.rs  concurrent.rs  context_bundler.rs  filter.rs  invoke.rs  minor_change.rs  mod.rs  types.rs
src/telemetry/: identity.rs  metrics.rs  mod.rs  reporter.rs
tests/: AGENTS.md  CLAUDE.md  cli_test.rs  e2e_live.rs  e2e_sync_modes.rs  e2e_tailor.rs  integration_errors.rs  integration_http_runners.rs  integration_no_tailor.rs  integration_smoke.rs  integration_static_analyzer.rs  integration_sync_modes.rs  integration_tailor.rs  lib_test.rs  mint_token_cli.rs  tui_e2e.rs
tests/common/: mod.rs
(+270 files in other folders)
