[package]
name = "actual-cli"
version = "0.1.0"
edition = "2021"
description = "ADR-powered CLAUDE.md generator"
autobenches = false
default-run = "actual"

[[bin]]
name = "actual"
path = "src/main.rs"

[[bin]]
name = "analysis_baseline"
path = "benches/analysis_baseline.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Terminal UI
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
similar = "2"
comfy-table = "7"

# File system
dirs = "5"
glob = "0.3"

# Config parsing
toml = "0.8"

# Crypto
sha2 = "0.10"

# Async utilities
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
which = "7"
tempfile = "3"

# Static analysis
tokei = "12"

[features]
integration = []
live-e2e = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
mockito = "1"
tokio = { version = "1", features = ["test-util"] }
