[package]
name = "actual-cli"
version = "0.1.0"
edition = "2021"
description = "ADR-powered CLAUDE.md generator"
autobenches = false
default-run = "actual"

[[bin]]
name = "actual"
path = "src/main.rs"

[[bin]]
name = "analysis_baseline"
path = "benches/analysis_baseline.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"

# Terminal UI
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
similar = "2"

# File system
dirs = "5"
glob = "0.3"

# Crypto
sha2 = "0.10"

# Async utilities
futures = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
which = "7"
tempfile = "3"

# Static analysis
tokei = "12"
ignore = "0.4"

# Tree-sitter parsing
tree-sitter = "0.25"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
# tree-sitter-kotlin excluded: v0.3 depends on tree-sitter 0.20, incompatible with 0.24
tree-sitter-swift = "0.7"

[profile.release]
strip = true        # Remove symbols and debug info
lto = true          # Link-time optimization; also reduces binary size
codegen-units = 1   # Better optimization, fewer symbol artifacts

[features]
integration = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
mockito = "1"
tokio = { version = "1", features = ["test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
