[workspace]
members = [".", "crates/tui-test"]

[package]
name = "actual-cli"
version = "0.2.0"
edition = "2021"
description = "ADR-powered AI context file generator"
license = "MIT"
repository = "https://github.com/actual-software/actual-cli"
homepage = "https://cli.actual.ai"
autobenches = false
default-run = "actual"

[[bin]]
name = "actual"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
serde_yaml = "0.9"
toml = "1.1"
regex = "1"
zip = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI
dialoguer = "0.12"
indicatif = "0.18"
console = "0.16"
similar = "2"
ratatui = "0.30"
crossterm = "0.29"

# File system
dirs = "6"
glob = "0.3"

# Crypto
sha2 = "0.10"
base64 = "0.22"
# Scoped personal-access-token storage: OS keychain (primary) with an
# AEAD-encrypted-file fallback for headless Linux/CI where no OS keychain is
# available. `keyring` is the portable keychain abstraction; chacha20poly1305 +
# argon2 protect the fallback file at rest.
#
# The Linux backend is `linux-native` (kernel keyutils), NOT `sync-secret-service`.
# The Secret Service backend links the system `libdbus` at build time through
# pkg-config, so it fails to *compile* on a headless / CI Linux host that lacks
# `libdbus-1-dev` — a harder failure than a runtime missing-daemon error. keyutils
# is pure syscalls: no build-time system dependency, no D-Bus daemon, so it builds
# everywhere and works headless. See docs/AGENT_AUTH.md for the finding.
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
chacha20poly1305 = "0.10"
argon2 = "0.5"

# Async utilities
futures = "0.3"
futures-util = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
which = "8"
tempfile = "3"

# Browser launch for OAuth login (best-effort; CLI always prints the URL too)
open = "5"

# Static analysis
tokei = { version = "14", default-features = false }

# Embedded assets
ignore = "0.4"

# Tree-sitter parsing
tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
# tree-sitter-kotlin excluded: v0.3 depends on tree-sitter 0.20, incompatible with 0.24
tree-sitter-swift = "0.7"

[profile.release]
strip = true        # Remove symbols and debug info
lto = true          # Link-time optimization; also reduces binary size
codegen-units = 1   # Better optimization, fewer symbol artifacts

[features]
default = ["telemetry"]
telemetry = []
integration = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
mockito = "1"
tokio = { version = "1", features = ["test-util"] }
tracing-test = "0.2"
tui-test = { path = "crates/tui-test" }
