[package]
name = "symphony-worker"
version = "0.1.0"
edition = "2021"
description = "Worker process for Symphony distributed agent orchestration"

[[bin]]
name = "symphony-worker"
path = "src/main.rs"

[dependencies]
symphony = { path = "../symphony" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
tracing-test = "0.2"
mockall = "0.14"
mockito = "1"
