[package]
name = "symphony"
version = "0.1.0"
edition = "2021"
description = "Long-running service that orchestrates coding agents to work on issues from Linear"

[[bin]]
name = "symphony"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Template rendering (Liquid-compatible)
liquid = "0.26"

# File watching
notify = "7"

# CLI
clap = { version = "4", features = ["derive"] }

# Environment
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
tempfile = "3"
mockito = "1"
tracing-test = "0.2"
