[package]
name = "tui-test"
version = "0.1.0"
edition = "2021"
description = "E2E testing library for TUI applications"

[dependencies]
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
insta = { version = "1", optional = true, default-features = false }
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
vt100 = "0.15"

[dev-dependencies]
insta = { version = "1", default-features = false }
os_pipe = "1"
sha2 = "0.11"
tempfile = "3"

[features]
default = []
snapshot = ["insta"]
